# shit-code

./: LICENSE  README.md
bst/inc/: AVL.hpp  RBT.hpp  plain_bst.hpp  utils.hpp
magic/: .clang-format  CMakeLists.txt  y_combinator.cpp
magic/macro_magic/: Cargo.toml
magic/macro_magic/src/: main.rs
str_match/: Cargo.toml
str_match/src/: bloom_filter.rs  bm.rs  kmp.rs  main.rs
